[kbss-cvut/termit-ui#825] Explicitly declare vocabulary namespace and prefix in model.